# se-toolkit-hackathon

./: .dockerignore  .env.example  BUILD_FIX.md  FIX_FINAL_EXPLANATION.md  LICENSE  QUICKSTART.md  README.md  README_FIX_RU.md  check-build.sh  diagnose.sh  docker-compose.simple.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  Dockerfile.simple  requirements.txt
backend/src/lms_backend/: auth.py  database.py  main.py  run.py  settings.py
backend/src/lms_backend/models/: __init__.py  task.py
backend/src/lms_backend/routers/: __init__.py  tasks.py
caddy/: Caddyfile
docs/screenshots/: .gitkeep
mcp/mcp-tasks/: pyproject.toml
mcp/mcp-tasks/src/mcp_tasks/: __init__.py  __main__.py  client.py  server.py  settings.py  tools.py
nanobot/: .dockerignore  Dockerfile  config.json  entrypoint.py  pyproject.toml
web-client/: app.js  index.html  nginx.conf  style.css
