[project]
name = "nanobot"
version = "0.1.0"
description = "Custom HKUDS/nanobot setup for TaskFlow"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "opentelemetry-distro[otlp]>=0.61b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-instrumentation-logging>=0.61b0",

    # Task MCP - add the Tasks MCP server.
    "mcp-tasks",
]
