[project]
name = "nanobot-project"
version = "0.1.0"
description = "Nanobot agent project"
requires-python = ">=3.12"
dependencies = [
    "nanobot-ai @ https://github.com/HKUDS/nanobot/archive/e7d371ec1e6531b28898ec2c869ef338e8dd46ec.zip",
    "mcp-lms",
]

[tool.uv.sources]
mcp-lms = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
